crates/reinhardt-core/macros/tests/ui/injectable/fail/both_inject_and_no_inject.stderr
error: Field cannot have both #[inject] and #[no_inject] attributes
  --> tests/ui/injectable/fail/both_inject_and_no_inject.rs:20:2
   |
20 | /     #[inject]
21 | |     #[no_inject] // Error: cannot have both
22 | |     db: Database,
   | |________________^
